test: expand test suites for ReportService and ExerciseService to achieve 100% path coverage